...
      }
    },
    "Auto CQ Reply" : {
      "comment" : "A label for the \"Reply to CQ received\" toggle in the Behavior settings.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Auto QSO logging" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Auto RX at start" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Auto-sequence" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Become Premium" : {
      "comment" : "A button that, when tapped, presents a view allowing the user to become a premium member of the app.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Behavior" : {
      "comment" : "Title of the \"Behavior\" section in the settings form.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "CAT Control" : {
      "comment" : "A title for the CAT control section of the settings view.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Configuration" : {
      "comment" : "The title of the Configuration tab in the main view.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Display & Transmission" : {
      "comment" : "A section header in the Behavior settings view.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Done" : {
      "comment" : "The text for a button that dismisses a sheet. In this case, the \"Support Development\" sheet.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Help" : {
      "comment" : "A link to the help screen.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Hold TX frequency" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "One payment. Forever" : {
      "comment" : "A description of the premium paywall's offer.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Only if new band/mode" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "PSK Reporter" : {
      "comment" : "Description of a feature that allows the user to log and view QSO information for multiple callsign prefixes.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "QSO Automation" : {
      "comment" : "A section header for QSO automation settings.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Receiver Control" : {
      "comment" : "The header for the \"Receiver Control\" section in the behavior settings view.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Reply to CQ received" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Restore Purchase" : {
      "comment" : "A button label that allows users to restore their purchase.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Show TX messages in RX list" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Unlock Premium Features" : {
      "comment" : "A title displayed below the star icon in the premium paywall.",
      "isCommentAutoGenerated" : true,
...
